# eccodes-simc

./: .copr.enc  .travis-build.sh  .travis.yml  3.datum.table  README.md  eccodes-simc.patch  eccodes-simc.sh.in  eccodes-simc.spec  eccodes-simc_deb11.patch  eccodes-simc_el7.patch  make-defs  meson.build  template.3.32768.def.in  utm_grib2.tmpl
debian/: changelog  control  copyright  rules
definitions/bufr/tables/0/local/1/200/0/: element.table
definitions/bufr/tables/0/local/1/200/0/codetables/: 4192.table
fedora/SPECS/: eccodes-simc.spec
